--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@
 
 html{
   box-sizing: border-box;
-
+  scroll-behavior: smooth;
 }
 
 *, *::before, after{
@@ -166,10 +166,10 @@ body{
 
 
 h1{
-  font-size: 47.3392px;
+  font-size: 47px;
   line-height: 59px;
   color: #070707;
-  font-size: 47.3392px;
+  font-size: 47px;
   font-weight: bold;
   font-style: normal;
   font-family: 'Gilroy';
@@ -191,7 +191,7 @@ h3{
   font-size:18px;
   text-align: center;
   color:#070707;
-  line-height:21.83px;
+  line-height:22px;
 
 }
 
@@ -199,16 +199,11 @@ h3{
 ============*/
 
 .container{
-  width: 943.61px;
+  width: 943px;
   max-width: 100%;
   margin: 0 auto;
   color:#070707;
 }
-
-
-
-
-
 
 
 /* Header
@@ -218,12 +213,12 @@ h3{
   position: fixed;
   top:0;
   left:0;
-  z-index: 1000;
+  z-index: 1;
   background-color: white;
 }
 
 .header__nav{
-  padding: 32.99px 0 32px;
+  padding: 33px 0 32px;
   border-bottom: 1px solid #828282;
 }
 
@@ -233,7 +228,7 @@ h3{
 }
 
 .header__item{
-  margin-right: 155.65px;
+  margin-right: 156px;
 }
 
 .header__item:last-child{
@@ -264,7 +259,7 @@ h3{
 .intro{
   background-color:#FFFFFF;
   height: 768px;
-  padding-top: 92.98px; 
+  padding-top: 93px; 
 }
 
 
@@ -276,15 +271,15 @@ h3{
     display: flex;
     justify-content: space-between;
     align-items:flex-end;
-    padding-top: 39.69px;
+    padding-top: 40px;
 }
 
 
 .intro__p1{
-  font-size: 47.3392px;
+  font-size: 47px;
   line-height: 59px;
   color: #070707
-  font-size: 47.3392pxpx;
+  font-size: 47px;
   font-weight: bold;
   font-style: normal;
   font-family: 'Gilroy';
@@ -317,7 +312,7 @@ h3{
 }
 
 .intro__img{
-  margin-top: 49.67px;
+  margin-top: 50px;
 }
 
 
@@ -337,7 +332,7 @@ h3{
 }
 
 .about__text{
-  margin-top: 17.69px;
+  margin-top: 18px;
 }
 
 
@@ -358,12 +353,12 @@ h3{
   padding-top: 91px;
 }
 .skills__p{
-  margin-top: 69.1px;
+  margin-top: 69px;
   text-align: center;
 }
 
 .skills__panel{
-  margin-top: 87.27px;
+  margin-top: 87px;
 }
 .skills__list{
   display: flex;
@@ -378,7 +373,7 @@ h3{
 }
 
 .name__skill{
-  margin-top: 27.99px;
+  margin-top: 28px;
   color: #828282;
   font-weight: bold;
   font-style: normal;
@@ -389,11 +384,11 @@ h3{
 .panel__star{
   display: flex;
   Justify-content:space-between;
-  margin-top: 40.41px;
+  margin-top: 40px;
 }
 
 .star__element{
-  margin-right: 9.2px;
+  margin-right: 9px;
 }
 
 .star__element:last-child{
@@ -410,7 +405,7 @@ h3{
 }
 
 .portfolio__h{
-  padding-top: 112.93px;
+  padding-top: 113px;
 }
 
 .portfolio__list{
@@ -421,7 +416,7 @@ h3{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 99.9px;
+  margin-top: 100px;
 
 }
 .portfolio__item:first-child{
@@ -436,7 +431,7 @@ h3{
   text-align: center;
   color:#070707;
   text-decoration-line: underline;
-  margin-top: 44.88px;
+  margin-top: 45px;
 } 
 
 
@@ -450,24 +445,24 @@ h3{
 }
 
 .contacts__h2{
-  padding-top: 114.24px;
+  padding-top: 114px;
 }
 
 .contacts__h3{
-  padding-top: 20.03px;
+  padding-top: 20px;
 }
 
 .contacts__buttom{
-  padding-top: 42.06px;
+  padding-top: 42px;
 }
 
 .contacts__iconlist{
-  padding-top:91.78px;
+  padding-top:91px;
   display: flex;
 }
 
 .contacts__iconeitem{
-  margin-right: 61.35px;
+  margin-right: 61px;
 }
 
 .contacts__iconeitem:last-child{
@@ -476,7 +471,7 @@ h3{
 }
 
 .contacts__footer{
-  margin-top: 57.56px;  
+  margin-top: 58px;  
   font-weight: 500;
   font-style: normal;
   font-family: 'Gilroy';
@@ -492,7 +487,7 @@ h3{
   display: inline-block;
   vertical-align: top;
   padding: 13px 30px;
-  margin-top: 42.6px;
+  margin-top: 43px;
 
   border-radius: 30px;
 
@@ -513,7 +508,7 @@ h3{
   display: inline-block;
   vertical-align: top;
   padding: 13px 30px;
-  margin-top: 42.6px;
+  margin-top: 43px;
 
   border-radius: 30px;
 
