--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ body{
   font-size: 18px;
 }
 
-
+/*
 h1{
   font-size: 47px;
   line-height: 59px;
@@ -174,6 +174,7 @@ h1{
   font-style: normal;
   font-family: 'Gilroy';
 }
+*/
 
 h2{
   font-weight: bold;
