--- a/css/style.css
+++ b/css/style.css
@@ -164,17 +164,6 @@ body{
   font-size: 18px;
 }
 
-/*
-h1{
-  font-size: 47px;
-  line-height: 59px;
-  color: #070707;
-  font-size: 47px;
-  font-weight: bold;
-  font-style: normal;
-  font-family: 'Gilroy';
-}
-*/
 
 h2{
   font-weight: bold;
@@ -259,13 +248,12 @@ h3{
 
 .intro{
   background-color:#FFFFFF;
-  height: 768px;
+  min-height: 80vh;
   padding-top: 93px; 
 }
 
 
 .intro__wraper{
-  display: block;
 
 }
 .intro__info{
@@ -279,7 +267,7 @@ h3{
 .intro__p1{
   font-size: 47px;
   line-height: 59px;
-  color: #070707
+  color: #070707;
   font-size: 47px;
   font-weight: bold;
   font-style: normal;
@@ -295,6 +283,13 @@ h3{
   text-align: center;
   color:#070707;
   line-height:21.83px;
+}
+.IMGTEST{
+  background-image: url('../img/image1.jpg');
+  background-size: 100% auto;
+  min-height: 21.5rem;
+  background-repeat: no-repeat;
+  background-position: 0 40%;
 }
 
 
@@ -314,6 +309,7 @@ h3{
 
 .intro__img{
   margin-top: 50px;
+  max-height: 1;
 }
 
 
@@ -321,7 +317,7 @@ h3{
 ============*/
 
 .about{
-  height:506px;
+  min-height:506px;
   background-color:#F6F6F6;
   display: flex;
   align-items: center;
@@ -341,7 +337,7 @@ h3{
 /* skills
 ============*/
 .skills{
-  height:610px;
+  min-height:610px;
   background-color:#FFFFFF;
 }
 
@@ -402,7 +398,7 @@ h3{
 
 .portfolio{
   background-color: #F6F6F6;
-  height: 2253px; 
+  min-height: 2253px; 
 }
 
 .portfolio__h{
@@ -439,7 +435,7 @@ h3{
 /* contacts
 ============*/
 .contacts{
-  height: 622px;
+  min-height: 622px;
   display: flex;
   flex-direction: column;
   align-items: center;
