--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ h3{
 ============*/
 
 .container{
-  width: 943px;
+  width: 1020px;
   max-width: 100%;
   margin: 0 auto;
   color:#070707;
@@ -244,7 +244,7 @@ h3{
 .intro{
   background-color:#FFFFFF;
   height: 100%;
-  padding-top: 93px; 
+  padding-top: 94px; 
 
 }
 
@@ -325,8 +325,8 @@ h3{
 }
 
 .about__wrapper{
-  padding-top: 120px;
-  padding-bottom: : 107px;
+  padding-top:120px;
+  padding-bottom:107px;
 }
 
 .about__content{
@@ -367,6 +367,7 @@ h3{
 .skills__list{
   display: flex;
   Justify-content:space-between;
+  flex-wrap: wrap;
 }
 
 .skills__item{
@@ -374,6 +375,10 @@ h3{
     flex-direction: column;
     Justify-content:center;
     align-items:center;
+}
+
+.img__skill{
+
 }
 
 .name__skill{
@@ -541,22 +546,36 @@ h3{
 ============*/
 
 @media screen and (max-width: 1200px) {
-
+  .container{
+    width: 1140px;
+  }
 }
 
 @media screen and (max-width: 1199px) {
-
+  .container{
+    width: 960px;
+  }
 }
 
 @media screen and (max-width: 991px) {
   .container{
-    width: 720px;
+    width: 100%;
+    padding: 0 50px;
   }
+
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 791px) {
   .container{
-    width: 540px;
+    width: 100%;
+    padding: 0 50px;
+  }
+  .skills__item{
+    width: 100%;
+    margin-top:81px;
+  }
+  .skills__item:first-child{
+    margin-top:0;
   }
 }
 
@@ -567,5 +586,29 @@ h3{
   }
 
 }
+@media screen and (max-width: 375px) {
+  .container{
+    width: 100%;
+    padding: 0 15px;
+  }
+  #language{
+    display: none;
+  }
+  .intro__info{
+    flex-direction: column;
+    align-items:flex-start;
+    }
+  .intro__p2{
+  text-align: left;
+  }
+  .header{
+    display: none;
+  }
+  .intro__wraper{
+  padding-top: 40px;
+  padding-bottom: 105px; 
+  }
+}
+
 
 
